--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nozbe/watermelondb": "^0.27.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-mmkv": "3.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
