--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@nozbe/watermelondb": "^0.27.1",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.4",
     "expo": "~51.0.28",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
